--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
 mysql-connector-python==8.2.0
 python-dotenv==1.0.0
+pandas==2.1.0
+pymysql==1.1.0
+SQLAlchemy==2.0.23
+numpy==1.24.3
+yfinance==0.2.33
